--- a/gamehomepage/footer.html
+++ b/gamehomepage/footer.html
@@ -5,7 +5,7 @@
                     <div class="widget">
                         <h3>Contact</h3>
                         <a href="https://www.hknu.ac.kr/kor/740/subview.do" target="_blank">
-                            <address>한경국립대학교 제1공학관 303호</address>
+                            <address>한경국립대학교 제1공학관 324호</address>
                         </a>
                         <ul class="list-unstyled links">
                             <li><a href="tel://000-000-0000">+82 00-000-0000</a></li>
@@ -23,8 +23,8 @@
                             <li><a href="chatbot.html">챗봇</a></li>
                         </ul>
                         <ul class="list-unstyled float-start links">
-                            <li><a href="target_chart.html">공략 계시판</a></li>
-                            <li><a href="popular_chart.html">자유 계시판</a></li>
+                            <li><a href="target_chart.html">공략 게시판</a></li>
+                            <li><a href="popular_chart.html">자유 게시판</a></li>
                         </ul>
                     </div>
                 </div>
