발표전 최종 버그 수정(거래소, 귀환 버그)

--- a/gamehomepage/4_main.html
+++ b/gamehomepage/4_main.html
@@ -530,7 +530,7 @@ if (kakaoNickname) {
                 <div class="row">
                     <div class="col-md-4">
                         <div class="testimonial">
-                            <img src="images/과일.jpg" alt="Image" class="img-fluid rounded-circle w-25 mb-4">
+                            <img src="images/배너.jpg" alt="Image" class="img-fluid rounded-circle w-25 mb-4">
                             <div class="rate">
                                 <span class="icon-star text-warning"></span>
                                 <span class="icon-star text-warning"></span>
